--- a/template.html
+++ b/template.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SVG test</title>
-	<link rel="stylesheet" type="text/css" href="plottable.css">
+	<link rel="stylesheet" type="text/css" href="bower_components/plottable/plottable.css">
 </head>
 <body>
 
@@ -11,10 +10,14 @@
 <svg id="chart" height="500" width="500"></svg>
 
 
-<script type="text/javascript" src="jquery.min.js"></script>
-<script type="text/javascript" src="d3.min.js"></script>
-<script type="text/javascript" src="plottable.js"></script>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
+<script type="text/javascript" src="bower_components/plottable/plottable.js"></script>
+
+
+<script>
+
+	console.log(1);
+</script>
 
 
 </body>
