Removed the external CSS dependency

--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="bower_components/plottable/plottable.css">
 </head>
 <body>
-<svg id="chart" height="500" width="500"></svg>
+<svg id="svg" height="500" width="500"></svg>
 <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 <script type="text/javascript" src="bower_components/plottable/plottable.js"></script>
 </body>
