--- a/template.html
+++ b/template.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="bower_components/plottable/plottable.css">
-</head>
+<head> <link rel="stylesheet" type="text/css" href="bower_components/plottable/plottable.css"> </head>
 <body>
 <svg id="svg" height="500" width="500"></svg>
 <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
